--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ethersproject/experimental": "^5.7.0",
     "@radix-ui/react-icons": "^1.3.0",
+    "@tableland/sdk": "^4.5.3-dev.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
