--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@ethersproject/experimental": "^5.7.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@tableland/sdk": "^4.5.3-dev.0",
+    "@types/cors": "^2.8.14",
+    "@types/express": "^4.17.19",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "next": "13.5.4",
