--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
   "dependencies": {
     "@ethersproject/experimental": "^5.7.0",
     "@radix-ui/react-icons": "^1.3.0",
+    "@safe-global/auth-kit": "^1.2.1",
     "@tableland/sdk": "^4.5.3-dev.0",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.19",
+    "@web3auth/base": "^7.0.4",
+    "@web3auth/metamask-adapter": "^7.0.4",
+    "@web3auth/modal": "4.3.1",
+    "@web3auth/openlogin-adapter": "^4.3.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cors": "^2.8.5",
