--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@ethersproject/experimental": "^5.7.0",
     "@radix-ui/react-icons": "^1.3.0",
-    "@safe-global/auth-kit": "^1.2.1",
+    "@safe-global/onramp-kit": "^1.4.0",
+    "@stripe/crypto": "^0.0.4",
+    "@stripe/stripe-js": "^2.1.7",
     "@tableland/sdk": "^4.5.3-dev.0",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.19",
