--- a/package.json
+++ b/package.json
@@ -9,18 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@ethersproject/experimental": "^5.7.0",
+    "@mui/material": "^5.14.13",
     "@radix-ui/react-icons": "^1.3.0",
+    "@safe-global/auth-kit": "^1.2.1",
     "@safe-global/onramp-kit": "^1.4.0",
+    "@safe-global/safe-react-components": "^2.0.6",
     "@stripe/crypto": "^0.0.4",
     "@stripe/stripe-js": "^2.1.7",
     "@tableland/sdk": "^4.5.3-dev.0",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.19",
-    "@web3auth/base": "^7.0.4",
+    "@web3auth/base": "4.3.0",
     "@web3auth/metamask-adapter": "^7.0.4",
     "@web3auth/modal": "4.3.1",
-    "@web3auth/openlogin-adapter": "^4.3.0",
+    "@web3auth/openlogin-adapter": "4.3.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cors": "^2.8.5",
@@ -29,6 +34,7 @@
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-router-dom": "^6.16.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7"
   },
