--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@ethersproject/experimental": "^5.7.0",
+    "@monerium/sdk": "^2.6.1",
     "@mui/material": "^5.14.13",
     "@radix-ui/react-icons": "^1.3.0",
     "@safe-global/auth-kit": "^1.2.1",
-    "@safe-global/onramp-kit": "^1.4.0",
+    "@safe-global/onramp-kit": "1.3.0",
+    "@safe-global/protocol-kit": "^1.3.0",
     "@safe-global/safe-react-components": "^2.0.6",
     "@stripe/crypto": "^0.0.4",
     "@stripe/stripe-js": "^2.1.7",
