--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@ethersproject/experimental": "^5.7.0",
     "@monerium/sdk": "^2.6.1",
     "@mui/material": "^5.14.13",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@safe-global/auth-kit": "^1.2.1",
     "@safe-global/onramp-kit": "1.3.0",
     "@safe-global/protocol-kit": "^1.3.0",
@@ -24,6 +26,7 @@
     "@tableland/sdk": "^4.5.3-dev.0",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.19",
+    "@use-it/event-listener": "^0.1.7",
     "@web3auth/base": "4.3.0",
     "@web3auth/metamask-adapter": "^7.0.4",
     "@web3auth/modal": "4.3.1",
