--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@safe-global/auth-kit": "^1.2.1",
-    "@safe-global/onramp-kit": "1.3.0",
+    "@safe-global/onramp-kit": "^1.4.0",
     "@safe-global/protocol-kit": "^1.3.0",
     "@safe-global/safe-react-components": "^2.0.6",
     "@stripe/crypto": "^0.0.4",
-    "@stripe/stripe-js": "^2.1.7",
+    "@stripe/stripe-js": "^2.1.8",
     "@tableland/sdk": "^4.5.3-dev.0",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.19",
