--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@safe-global/api-kit": "^1.3.1",
     "@safe-global/auth-kit": "^1.2.1",
     "@safe-global/onramp-kit": "^1.4.0",
     "@safe-global/protocol-kit": "^1.3.0",
