--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -25,6 +25,7 @@
     "typescript": ">=4.5.0"
   },
   "dependencies": {
+    "@chainlink/contracts": "^0.8.0",
     "@openzeppelin/contracts": "^5.0.0"
   }
 }
