--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@safe-global/auth-kit": "^1.2.1",
     "@safe-global/onramp-kit": "^1.4.0",
     "@safe-global/protocol-kit": "^1.3.0",
+    "@safe-global/relay-kit": "^1.3.0",
+    "@safe-global/safe-core-sdk-types": "^2.3.0",
     "@safe-global/safe-react-components": "^2.0.6",
     "@stripe/crypto": "^0.0.4",
     "@stripe/stripe-js": "^2.1.8",
