--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
+    "ethers": "^5.7.0",
     "postcss": "^8",
     "tailwindcss": "^3",
     "typescript": "^5"
