--- a/database/package.json
+++ b/database/package.json
@@ -8,6 +8,7 @@
     "@stripe/crypto": "^0.0.4",
     "@stripe/stripe-js": "^2.1.7",
     "@tableland/sdk": "4.5.2",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "ts-node": "^10.9.1"
   }
 }
