--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@chainlink/contracts": "^0.8.0",
-    "@openzeppelin/contracts": "^5.0.0"
+    "@openzeppelin/contracts": "^5.0.0",
+    "hardhat-deploy": "^0.11.43"
   }
 }
