--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
 		"@radix-ui/colors": "^3.0.0",
 		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-icons": "^1.3.0",
+		"@radix-ui/react-navigation-menu": "^1.1.4",
 		"@radix-ui/react-slot": "^1.0.2",
+		"@radix-ui/react-toast": "^1.1.5",
 		"@safe-global/api-kit": "^1.3.1",
 		"@safe-global/auth-kit": "^1.2.1",
 		"@safe-global/onramp-kit": "^1.4.0",
