--- a/database/package.json
+++ b/database/package.json
@@ -3,11 +3,17 @@
   "version": "1.0.0",
   "main": "db.ts",
   "license": "MIT",
+  "scripts": {
+    "tsc": "tsc",
+    "start": "nodemon api.js",
+    "server": "tsc && nodemon api.js"
+  },
   "dependencies": {
     "@safe-global/onramp-kit": "^1.4.0",
     "@stripe/crypto": "^0.0.4",
     "@stripe/stripe-js": "^2.1.7",
     "@tableland/sdk": "4.5.2",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nodemon": "^3.0.1"
   }
 }
